--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,18 @@ services:
       MYSQL_ROOT_PASSWORD: "1234"
       MYSQL_DATABASE: "WebCuoiKy"
     ports:
-      - "3300:3306"
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./webck.sql:/docker-entrypoint-initdb.d/webck.sql
-    command: --default-authentication-plugin=mysql_native_password
+    command: --default-authentication-plugin=caching_sha2_password
     networks:
       - my_network
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:7.4.1-alpine
@@ -26,7 +31,7 @@ services:
     networks:
       - my_network
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -39,7 +44,7 @@ services:
       - mysql
       - redis
     environment:
-      MYSQL_URL: "jdbc:mysql://mysql:3300/WebCuoiKy"
+      MYSQL_URL: "jdbc:mysql://mysql:3306/WebCuoiKy?useSSL=false&serverTimezone=UTC"
       MYSQL_USERNAME: "root"
       MYSQL_PASSWORD: "1234"
       REDIS_HOST: "redis"
