--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <mysql.version>8.0.33</mysql.version>
     <weld.servlet.version>2.4.8.Final</weld.servlet.version>
     <fasterxml.jackson>2.17.2</fasterxml.jackson>
+    <jackson.version>2.18.3</jackson.version>
 
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -128,23 +129,27 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>2.13.0</version> <!-- hoặc phiên bản mới hơn -->
+        <version>${jackson.version}</version>
+<!--        <version>2.13.0</version> &lt;!&ndash; hoặc phiên bản mới hơn &ndash;&gt;-->
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
 <!--        <version>2.13.0</version> &lt;!&ndash; hoặc phiên bản mới hơn &ndash;&gt;-->
-        <version>2.18.3</version>
+<!--        <version>2.18.3</version>-->
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>2.13.0</version> <!-- hoặc phiên bản mới hơn -->
+        <version>${jackson.version}</version>
+<!--        <version>2.13.0</version> &lt;!&ndash; hoặc phiên bản mới hơn &ndash;&gt;-->
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.datatype</groupId>
         <artifactId>jackson-datatype-jsr310</artifactId>
-        <version>2.15.0</version> <!-- Use a version compatible with your Jackson version -->
+        <version>${jackson.version}</version>
+<!--        <version>2.15.0</version> &lt;!&ndash; Use a version compatible with your Jackson version &ndash;&gt;-->
       </dependency>
 
 
@@ -190,11 +195,6 @@
       <version>3.8.1</version>
     </dependency>
 
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>2.13.0</version> <!-- Hoặc phiên bản Jackson phù hợp với dự án của bạn -->
-    </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-imaging</artifactId>
