--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     networks:
       - my_network
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-p1234" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 
   redis:
     image: redis:7.4.1-alpine
@@ -36,10 +42,12 @@ services:
     container_name: my_java_app_14
     restart: always
     depends_on:
-      - mysql
-      - redis
+      mysql:
+        condition: service_healthy
+      redis :
+        condition: service_started
     environment:
-      MYSQL_URL: "jdbc:mysql://mysql:3300/WebCuoiKy"
+      MYSQL_URL: "jdbc:mysql://mysql:3306/WebCuoiKy"
       MYSQL_USERNAME: "root"
       MYSQL_PASSWORD: "1234"
       REDIS_HOST: "redis"
